Restructuing the files

--- a/education.html
+++ b/education.html
@@ -22,17 +22,15 @@
 								<li>
 									<a href="#">More</a>
 									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
+										<li><a href="#">Mentorship</a></li>
 										<li>
-											<a href="#">Sed consequat</a>
+											<a href="#">Blog</a>
 											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
+												<li><a href="#">T-SNE</a></li>
+												<li><a href="#">Latent Dirichlet Allocation</a></li>
+												<li><a href="#">Support Vector Regression</a></li>
+												<li><a href="#">Support Vector Clustering</a></li>
+												<li><a href="#">Decision Tree Classification</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Nisl tempus</a></li>
@@ -60,7 +58,7 @@
 									<header>
 										<a href="#"><img src="images/VJTI Logo.jpg" alt="" height=100px width=360px align="right"/></a>
 										<h1><br class="mobile-hide" />Veermata Jijabai Technological Institute, Mumbai, India</h1>
-										<p><i>Bachelor of Technology in Electonics and Telecommunication Engineering</i></p>
+										<p><i>Bachelor of Technology in Electronics and Telecommunication Engineering</i></p>
 									</header>
 
 									<a href="#" class="image featured">
