--- a/projects/SMEBot.html
+++ b/projects/SMEBot.html
@@ -22,17 +22,15 @@
 								<li>
 									<a href="#">More</a>
 									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
+										<li><a href="#">Mentorship</a></li>
 										<li>
-											<a href="#">Sed consequat</a>
+											<a href="#">Blog</a>
 											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
+												<li><a href="#">T-SNE</a></li>
+												<li><a href="#">Latent Dirichlet Allocation</a></li>
+												<li><a href="#">Support Vector Regression</a></li>
+												<li><a href="#">Support Vector Clustering</a></li>
+												<li><a href="#">Decision Tree Classification</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Nisl tempus</a></li>
@@ -67,22 +65,22 @@
 											<ul class="style2">
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="../images/FogLogo.svg" alt="" /></a>
-														<h3><a href="#">FOG Architecture based Wireless sensor network for ML Applications</a></h3>
+														<a href="FOG.html" class="image left"><img src="../images/FogLogo.svg" alt="" /></a>
+														<h3><a href="FOG.html">FOG Architecture based Wireless sensor network for ML Applications</a></h3>
 														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
 														<a href="L3Support.html" class="image left"><img src="../images/SupportTicketLogo.svg" alt="" /></a>
-														<h3><a href="#">L3 Support Ticket Management using NLP</a></h3>
+														<h3><a href="L3Support.html">L3 Support Ticket Management using NLP</a></h3>
 														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
 													</article>
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="../images/waterScada.svg" alt="" /></a>
-														<h3><a href="#">Critical Water Networks</a></h3>
+														<a href="waterScada.html" class="image left"><img src="../images/waterScada.svg" alt="" /></a>
+														<h3><a href="waterScada.html">Critical Water Networks</a></h3>
 														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
 													</article>
 												</li>
