--- a/professional.html
+++ b/professional.html
@@ -22,17 +22,15 @@
 								<li>
 									<a href="#">More</a>
 									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
+										<li><a href="#">Mentorship</a></li>
 										<li>
-											<a href="#">Sed consequat</a>
+											<a href="#">Blogs</a>
 											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
+												<li><a href="#">T-SNE</a></li>
+												<li><a href="#">Latent Dirichlet Allocation</a></li>
+												<li><a href="#">Support Vector Regression</a></li>
+												<li><a href="#">Support Vector Clustering</a></li>
+												<li><a href="#">Decision Tree Classification</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Nisl tempus</a></li>
