--- a/project.html
+++ b/project.html
@@ -46,128 +46,68 @@
 					<div class="title">Projects</div>
 					<div class="container">
 						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
-
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="box">
-											<header>
-												<h2>More projects from Credit Suisse</h2>
-											</header>
-											<p>This work was a part of my tenure at Credit Suisse. To see more of my works at Credit Suisse,
-											Click on <b>Learn More</b>.</p>
-											<a href="education.html" class="button style1">Learn More</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>More Projects Like this</h2>
-											</header>
-											<ul class="style2">
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects/FOG.html" class="image left"><img src="images/FogLogo.svg" alt="" /></a>
-														<h3><a href="projects/FOG.html">FOG Architecture based Wireless sensor network for ML Applications</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects/L3Support.html" class="image left"><img src="images/SupportTicketLogo.svg" alt="" /></a>
-														<h3><a href="projects/L3Support.html">L3 Support Ticket Management using NLP</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="projects/WaterScada.html" class="image left"><img src="images/waterScada.svg" alt="" /></a>
-														<h3><a href="projects/WaterScada.html">Critical Water Networks</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-											</ul>
-											<a href="#" class="button style1">Archives</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>Magna diam vehicula</h2>
-											</header>
-											<ul class="style3">
-												<li><a href="#">Nulla iaculis egestas varius</a></li>
-												<li><a href="#">Augue massa feugiat quam pretium</a></li>
-												<li><a href="#">Orci sem vel libero cras nisi odio</a></li>
-												<li><a href="#">Sed hendrerit massa nam mattis</a></li>
-												<li><a href="#">Turpis vel leo accumsan aliquet</a></li>
-											</ul>
-										</section>
-									</div>
-
-							</div>
-							<div class="col-8 col-12-medium imp-medium">
+							<div>
 
 								<!-- Content -->
 									<div id="content">
-										<article class="box post">
-											<header class="style1">
-											<a href="#" class="image featured">
-												<img src="images/ChatBotLogo.svg" alt="" height=100 width=300 />
-											</a>
-												<p>NLP, Neural Embeddings, Similarity Ranking, Text Extraction</p>
-											</header>
-											<p>SMEBot is Credit Suisse internal chatbot framework designed to integrate on various
-											application platforms and provide NLP based interface to the users.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-											<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-											ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-											eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-											eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-											tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-											odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-											facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-											tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-											posuere cubilia.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-										</article>
-										<div class="row gtr-150">
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-										</div>
-									</div>
+										<div class="wall">
+
+            <div class="wall-item">
+                  <img src="images/SMEBot.jpg" alt="">
+                  <h2>SMEBot</h2>
+                  <p>NLP Based Chatbot framework leveraging Deep Learning Models</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/ForestAI.jpg" alt="">
+                  <h2>Forest AI</h2>
+                  <p>Speech Processing based connected network for detection of illegal deforesting.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/Fusion.jpg" alt="">
+                  <h2>Fusion</h2>
+                  <p>Software and hardware developer tool for connecting internet connected products</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/DRR.png" alt="">
+                  <h2>Digital Regulatory Reporting</h2>
+                  <p>Distributed ledger based solution created at FCA to solve current situation of Regulatory Reporting</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/05.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta harum atque maxime architecto hic at porro quo impedit provident exercitationem.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/06.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae enim dolorum libero quaerat quo.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/07.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, perferendis nesciunt, rerum, beatae quo incidunt et, provident quos fugit dolor similique quae voluptatem totam amet nulla iure praesentium doloribus! Dolor voluptates fugiat dolores deleniti velit hic aliquam at, culpa eius!</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/08.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum enim quas reprehenderit.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/09.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis molestias quibusdam veritatis commodi natus inventore ex, harum delectus! Vero necessitatibus labore beatae non cumque laborum quos numquam a voluptatem, ea libero obcaecati, fuga consequatur quisquam, dignissimos ad quae, reprehenderit hic.</p>
+            </div>
+        </div>
+				
+					</div>
 
 							</div>
 						</div>
@@ -314,6 +254,16 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+      		<script src="assets/js/jaliswall.js"></script>
+      		<script type="text/javascript">
+
+            $('.wall').jaliswall({
+                  item : '.wall-item',
+                  columnClass : '.wall-column'
+            });
+
+      		</script>
 
 	</body>
 </html>
