Updating publications page

--- a/project.html
+++ b/project.html
@@ -52,7 +52,7 @@
 									<div id="content">
 										<div class="wall">
 
-            <div class="wall-item">
+            <div class="wall-item" href="projects/SMEBot.html">
                   <img src="images/SMEBot.jpg" alt="">
                   <h2>SMEBot</h2>
                   <p>NLP Based Chatbot framework leveraging Deep Learning Models</p>
@@ -236,11 +236,6 @@
 									</section>
 
 							</div>
-						</div>
-						<div id="copyright">
-							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
 						</div>
 					</div>
 				</section>
