--- a/publication.html
+++ b/publication.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Publications</title>
+		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="right-sidebar is-preload">
+	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -46,140 +46,68 @@
 					<div class="title">Publications</div>
 					<div class="container">
 						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
+							<div>
 
 								<!-- Content -->
 									<div id="content">
-										<article class="box post">
-											<header class="style1">
-												<h2>Hexagonal Coil Systems for Uniform Magnetic Field Generation</h2>
-												<p>Dec 11, 2016 - IEEE Asia-Pacific Conference on Applied Electromagnetics (APACE - 2016)</p>
-											</header>
-											<a href="https://ieeexplore.ieee.org/document/7916472" class="image featured">
-												<img src="images/equidistant.png" alt="" width=250/>
-											</a>
+										<div class="wall">
 
-											<p>In some disciplines of research and technology, controlled magnetic field generation with very high degree of uniformity is the prime need. Due to structural constraints and ease of access, it is not always possible to use circular and square coils. This paper presents the mathematical analysis of homogeneous magnetic field produced by two, three and four hexagonal coil systems. It presents a technique to compute optimum placement and ampere turns of each coil for the desired magnetic field with maximum uniformity. The analytical results are verified using graphical results simulated on MATLAB.</p>
-											<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-											odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-											facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-											tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-											<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-											ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-											eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-											eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-											tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-											odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-											facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-											tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-											posuere cubilia.</p>
-											<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-											bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-											lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-											Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-											magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-											leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-											amet risus elit.</p>
-										</article>
-										<div class="row gtr-150">
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<header>
-														<h2>Magna pulvinar tempus</h2>
-													</header>
-													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-													<p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-													eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-													tempus.</p>
-													<a href="#" class="button style1">More</a>
-												</section>
-											</div>
-										</div>
-									</div>
+            <div class="wall-item">
+                  <img src="images/SLW_Full.jpg" alt="">
+                  <h2>The Supervised Learning Workshop</h2>
+                  <p>NLP Based Chatbot framework leveraging Deep Learning Models</p>
+            </div>
 
-							</div>
-							<div class="col-4 col-12-medium">
+            <div class="wall-item">
+                  <img src="images/USL_Full.jpg" alt="">
+                  <h2>The Unsupervised Learning Workshop</h2>
+                  <p>Speech Processing based connected network for detection of illegal deforesting.</p>
+            </div>
 
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="box">
-											<header>
-												<h2>More from Center of Excellence in Non-linear Dynamical Systems</h2>
-											</header>
-											<p>This work was done as a part of research during my undergraduate studies in 
-											Veermata Jijabai Technological Institute over an L&T sponsored research Deperming.
-											To follow more on this space, click on <b>Learn More</b>. </p>
-											<a href="education.html" class="button style1">Learn More</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>More at Packt Publications</h2>
-											</header>
-											<ul class="style2">
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/SL Workshop.jpg" alt="" /></a>
-														<h3><a href="#">The Supervised Learning Workshop</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/P Workshop.jpg" alt="" /></a>
-														<h3><a href="#">The Python Workshop</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-												<li>
-													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/USL Workshop.jpg" alt="" /></a>
-														<h3><a href="#">The Unsupervised Learning Workshop</a></h3>
-														<p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
-													</article>
-												</li>
-											</ul>
-											<a href="#" class="button style1">Archives</a>
-										</section>
-										<section class="box">
-											<header>
-												<h2>Magna diam vehicula</h2>
-											</header>
-											<ul class="style3">
-												<li><a href="#">Nulla iaculis egestas varius</a></li>
-												<li><a href="#">Augue massa feugiat quam pretium</a></li>
-												<li><a href="#">Orci sem vel libero cras nisi odio</a></li>
-												<li><a href="#">Sed hendrerit massa nam mattis</a></li>
-												<li><a href="#">Turpis vel leo accumsan aliquet</a></li>
-												<li><a href="#">Dapibus mi fermentum fusce non</a></li>
-												<li><a href="#">Arcu laoreet sapien tempus</a></li>
-												<li><a href="#">Nulla iaculis egestas varius</a></li>
-												<li><a href="#">Augue massa feugiat quam pretium</a></li>
-												<li><a href="#">Orci sem vel libero cras nisi odio</a></li>
-												<li><a href="#">Sed hendrerit massa nam mattis</a></li>
-											</ul>
-										</section>
-									</div>
+            <div class="wall-item">
+                  <img src="images/DW_Full.jpg" alt="">
+                  <h2>The Data Wrangling Workshop</h2>
+                  <p>Software and hardware developer tool for connecting internet connected products</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/DRR.png" alt="">
+                  <h2>Digital Regulatory Reporting</h2>
+                  <p>Distributed ledger based solution created at FCA to solve current situation of Regulatory Reporting</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/05.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta harum atque maxime architecto hic at porro quo impedit provident exercitationem.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/06.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae enim dolorum libero quaerat quo.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/07.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, perferendis nesciunt, rerum, beatae quo incidunt et, provident quos fugit dolor similique quae voluptatem totam amet nulla iure praesentium doloribus! Dolor voluptates fugiat dolores deleniti velit hic aliquam at, culpa eius!</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/08.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum enim quas reprehenderit.</p>
+            </div>
+
+            <div class="wall-item">
+                  <img src="images/09.jpg" alt="">
+                  <h2>Lorem ipsum dolor.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis molestias quibusdam veritatis commodi natus inventore ex, harum delectus! Vero necessitatibus labore beatae non cumque laborum quos numquam a voluptatem, ea libero obcaecati, fuga consequatur quisquam, dignissimos ad quae, reprehenderit hic.</p>
+            </div>
+        </div>
+				
+					</div>
 
 							</div>
 						</div>
@@ -227,9 +155,10 @@
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">Have more questions?</div>
+					<div class="title">The Rest Of It</div>
 					<div class="container">
 						<header class="style1">
+							<h2>Ipsum sapien elementum portitor?</h2>
 							<p>
 								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
 								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
@@ -271,9 +200,9 @@
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
-														B-302, Yumna Meridian,<br />
-														Acolade Road, Kharadi,<br />
-														Pune - 411014, Mahrashtra, India
+														Untitled Corp<br />
+														1234 Somewhere Rd<br />
+														Nashville, TN 00000
 													</p>
 												</section>
 											</div>
@@ -281,8 +210,9 @@
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
-														<a href="https://github.com/Ratansingh648">GitHub</a><br />
-														<a href="https://www.linkedin.com/in/ratan-singh-811425b9/">LinkedIn</a><br />
+														<a href="#">@untitled-corp</a><br />
+														<a href="#">linkedin.com/untitled</a><br />
+														<a href="#">facebook.com/untitled</a>
 													</p>
 												</section>
 											</div>
@@ -290,7 +220,7 @@
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
-														<a href="#">ratansingh648@gmail.com</a>
+														<a href="#">info@untitled.tld</a>
 													</p>
 												</section>
 											</div>
@@ -298,7 +228,7 @@
 												<section>
 													<h3 class="icon solid fa-phone">Phone</h3>
 													<p>
-														(+91) 90 8250 6327
+														(000) 555-0000
 													</p>
 												</section>
 											</div>
@@ -306,11 +236,6 @@
 									</section>
 
 							</div>
-						</div>
-						<div id="copyright">
-							<ul>
-								<li>&copy; Ratan Singh</li><li><a href="ratansingh648.github.io">ratansingh648.github.io</a></li>
-							</ul>
 						</div>
 					</div>
 				</section>
@@ -324,6 +249,16 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+      		<script src="assets/js/jaliswall.js"></script>
+      		<script type="text/javascript">
+
+            $('.wall').jaliswall({
+                  item : '.wall-item',
+                  columnClass : '.wall-column'
+            });
+
+      		</script>
 
 	</body>
 </html>
