Updating projects page

--- a/project.html
+++ b/project.html
@@ -52,7 +52,7 @@
 									<div id="content">
 										<div class="wall">
 
-            <div class="wall-item" href="projects/SMEBot.html">
+            <div class="wall-item">
                   <img src="images/SMEBot.jpg" alt="">
                   <h2>SMEBot</h2>
                   <p>NLP Based Chatbot framework leveraging Deep Learning Models</p>
@@ -77,14 +77,14 @@
             </div>
 
             <div class="wall-item">
-                  <img src="images/05.jpg" alt="">
-                  <h2>Lorem ipsum dolor.</h2>
+                  <img src="images/C2_Benchmark.png" alt="">
+                  <h2>C2 Benchmarking of Loans</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta harum atque maxime architecto hic at porro quo impedit provident exercitationem.</p>
             </div>
 
             <div class="wall-item">
-                  <img src="images/06.jpg" alt="">
-                  <h2>Lorem ipsum dolor.</h2>
+                  <img src="images/Water Networks.jpg" alt="">
+                  <h2>Critical Water Networks</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae enim dolorum libero quaerat quo.</p>
             </div>
 
