--- a/index.html
+++ b/index.html
@@ -23,18 +23,7 @@
 									<a href="#">More</a>
 									<ul>
 										<li><a href="#">Mentorship</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
-										<li>
-											<a href="#">Sed consequat</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
-											</ul>
-										</li>
+										<li><a href="blogs.html">Blog</a></li>
 										<li><a href="#">Nisl tempus</a></li>
 									</ul>
 								</li>							
