--- a/project.html
+++ b/project.html
@@ -23,16 +23,7 @@
 									<a href="#">More</a>
 									<ul>
 										<li><a href="#">Mentorship</a></li>
-										<li>
-											<a href="#">Blog</a>
-											<ul>
-												<li><a href="#">T-SNE</a></li>
-												<li><a href="#">Latent Dirichlet Allocation</a></li>
-												<li><a href="#">Support Vector Regression</a></li>
-												<li><a href="#">Support Vector Clustering</a></li>
-												<li><a href="#">Decision Tree Classification</a></li>
-											</ul>
-										</li>
+										<li><a href="blogs.html">Blog</a></li>
 										<li><a href="#">Nisl tempus</a></li>
 									</ul>
 								</li>
