Adding Side Pane Profile

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<div id="navigation" class="collapse navbar-collapse flex-column" >
 				<div class="profile-section pt-3 pt-lg-0">
-				    <img class="profile-image mb-3 rounded-circle mx-auto" src="images/me.png" alt="image" >			
+				    <img class="profile-image mb-3 rounded-circle mx-auto" src="images/me.PNG" alt="image" >			
 					
 					<div class="bio mb-3">Hi, my name is Ratan Singh. I am ML Engineer at Credit Suisse. My area of interest lies specifically NLP and Predictive Modelling.<br></div><!--//bio-->
 					<ul class="social-list list-inline py-3 mx-auto">
