Adding Academics page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--------------------------------------Side Bar Begins---------------------------------------------------------------------->
     <div id="navbar">
-        <h id="navbar-title">Ratan Singh</h>
+        <a id="navbar-title" class="hide-underline" href="/index.html">Ratan Singh</a>
         <img src="assets/images/profile-2.PNG" alt="Profile" id="side-profile">
         <p class="navbar-text">Hi, my name is Ratan Singh and I'm a senior software engineer. Welcome to my personal website!</p>
 
@@ -40,40 +40,40 @@
 
         <!-- Navigation tabs starts here-->
         <div id="nav-links">
-            <div class="nav-link nav-link-h">
-                <i class="fa fa-user social-icon" aria-hidden="true"></i>
-                <h>About Me</h>
-            </div>
+            <a class="nav-link nav-link-h hide-underline" href="/academics.html">
+                <i class="fa fa-university social-icon" aria-hidden="true"></i>
+                <h>Academics</h>
+            </a>
 
-            <div class="nav-link nav-link-h">
+            <a class="nav-link nav-link-h hide-underline" href="#">
+                <i class="fa fa-briefcase social-icon" aria-hidden="true"></i>
+                <h>Professional Experience</h>
+            </a>
+
+            <a class="nav-link nav-link-h hide-underline" href="#">
                 <i class="fa fa-laptop social-icon" aria-hidden="true"></i>
                 <h>Portfolio</h>
-            </div>
+            </a>
 
-            <div class="nav-link nav-link-h">
+            <a class="nav-link nav-link-h hide-underline" href="#">
                 <i class="fa fa-book social-icon" aria-hidden="true"></i>
                 <h>Publications</h>
-            </div>
+            </a>
 
-            <div class="nav-link nav-link-h">
+            <a class="nav-link nav-link-h hide-underline" href="#">
                 <i class="fa fa-file social-icon" aria-hidden="true"></i>
                 <h>Resume</h>
-            </div>
+            </a>
 
-            <div class="nav-link nav-link-h">
+            <a class="nav-link nav-link-h hide-underline" href="#">
                 <i class="fa fa-th social-icon" aria-hidden="true"></i>
                 <h>Blog</h>
-            </div>
+            </a>
 
-            <div class="nav-link nav-link-h">
-                <i class="fa fa-inbox social-icon" aria-hidden="true"></i>
-                <h>Contact</h>
-            </div>
-
-            <div class="nav-link nav-link-h">
+            <a class="nav-link nav-link-h hide-underline" href="#">
                 <i class="fa fa-cogs social-icon" aria-hidden="true"></i>
                 <h>More Pages</h>
-            </div>
+            </a>
 
 
         </div>
