Adding Academics page details

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--------------------------------------Side Bar Begins---------------------------------------------------------------------->
     <div id="navbar">
         <a id="navbar-title" class="hide-underline" href="/index.html">Ratan Singh</a>
-        <img src="assets/images/profile-2.PNG" alt="Profile" id="side-profile">
+        <img src="assets/images/profile-2.png" alt="Profile" id="side-profile">
         <p class="navbar-text">Hi, my name is Ratan Singh and I'm a senior software engineer. Welcome to my personal website!</p>
 
 
@@ -134,7 +134,7 @@
                 </div>
             </div>
             
-            <img src="assets/images/profile-3.PNG" alt="Profile" id="main-profile">
+            <img src="assets/images/profile-3.svg" alt="Profile" id="main-profile">
 
         </div>
 
