Adding Work Experience

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h>Academics</h>
             </a>
 
-            <a class="nav-link nav-link-h hide-underline" href="#">
+            <a class="nav-link nav-link-h hide-underline" href="/professional.html">
                 <i class="fa fa-briefcase social-icon" aria-hidden="true"></i>
                 <h>Professional Experience</h>
             </a>
