--- a/blog-home.html
+++ b/blog-home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>DevCard - Bootstrap 5 vCard &amp; Portfolio Template For Developers</title>
+	<title>Blog - Home</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
