--- a/academics.html
+++ b/academics.html
@@ -133,13 +133,10 @@
 						</div>
 
 						<div>
-							<button class="badge rounded-pill border mb-1">Mathematics Foundations for Machine
-								Learning</button>
-							<button class="badge rounded-pill border mb-1">Advanced Signal Processing</button>
 							<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
-							<button class="badge rounded-pill border mb-1">Numerical Techniques</button>
-							<button class="badge rounded-pill border mb-1">Engineering Mathematics I - IV</button>
-							<button class="badge rounded-pill border mb-1">Numerical Techniques</button>
+							<button class="badge rounded-pill border mb-1">Random Processes</button>
+							<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
+							<button class="badge rounded-pill border mb-1">Special Problems</button>
 						</div>
 					</div>
 					<!--//col-->
