Updating the skill section

--- a/portfolio.html
+++ b/portfolio.html
@@ -142,15 +142,12 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-1.jpg" class="card-img" alt="image">
+									<img src="assets/images/forest-logo-name-small.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
-										<p class="card-text">Project intro lorem ipsum dolor sit amet, consectetuer
-											adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient
-											montes.</p>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Forest AI</a></h5>
+										<p class="card-text"></p>
 										<p class="card-text"><small class="text-muted">Client: Google</small></p>
 									</div>
 								</div>
@@ -172,12 +169,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-2.jpg" class="card-img" alt="image">
+									<img src="assets/images/fusion-icon.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Fusion</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -202,16 +198,15 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-3.jpg" class="card-img" alt="image">
+									<img src="assets/images/chatbot.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">SMEBot</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Google</small></p>
+										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
 									</div>
 								</div>
 							</div>
@@ -232,12 +227,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+									<img src="assets/images/support-ticket.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Support Ticket Classification</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -262,16 +256,15 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-5.jpg" class="card-img" alt="image">
+									<img src="assets/images/credit-risk.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Insight</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: SalesForce</small></p>
+										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
 									</div>
 								</div>
 							</div>
@@ -292,16 +285,15 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-6.jpg" class="card-img" alt="image">
+									<img src="assets/images/DRR.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Digital Regulatory Reporting</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Uber</small></p>
+										<p class="card-text"><small class="text-muted">Client: FCA and Bank of England</small></p>
 									</div>
 								</div>
 							</div>
