--- a/academics.html
+++ b/academics.html
@@ -128,7 +128,7 @@
 				<div class="row mb-4">
 					<div class="col">
 						<h3 class="name font-weight-bold mb-1">Georgia Institute of Technology</h3>
-						<div class="tagline mb-3 font-italic">Incoming Graduate Student in Electrical and Computer
+						<div class="tagline mb-3 font-italic">Graduate Student in Electrical and Computer
 							Engineering (Aug 2021 - Present)
 						</div>
 
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 
-				<div class="row">
+				<div class="row mb-5">
 					<div class="col">
 						<h3 class="name font-weight-bold mb-1">Veermata Jijabai Technological Institute</h3>
 						<div class="tagline mb-3 font-italic">Bachelor of Technology in Electronics and Telecomm.
@@ -171,7 +171,53 @@
 					</div>
 				</div>
 			</div>
+			
+			<br>
+
+			<h2 class="section-title font-weight-bold mt-4">Academic Research</h2>
+			<div class="row mb-4">
+				<div class="col">
+					<h3 class="name font-weight-bold mt-3 mb-1">Emory University</h3>
+					<div class="tagline mb-3 font-italic">Graduate Student Researcher, Clifford Lab, Biomedical Informatics</div>
+
+					<div>
+						<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
+						<button class="badge rounded-pill border mb-1">Random Processes</button>
+						<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
+						<button class="badge rounded-pill border mb-1">Special Problems</button>
+					</div>
+				</div>
+				<!--//col-->
+
+				<div class="col-md-5 col-lg-5">
+					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/emory-university.svg">
+				</div>
+
+			</div>
+
+			<div class="row mb-4">
+				<div class="col">
+					<h3 class="name font-weight-bold mt-3 mb-1">Center of Excellence in Nonlinear Dynamical Systems</h3>
+					<div class="tagline mb-3 font-italic">Undergraduate Student Researcher / Research Assistant, Electromagentism</div>
+
+					<div>
+						<button class="badge rounded-pill border mb-1">Digital Image Processing</button>
+						<button class="badge rounded-pill border mb-1">Random Processes</button>
+						<button class="badge rounded-pill border mb-1">Advanced Programming Techniques</button>
+						<button class="badge rounded-pill border mb-1">Special Problems</button>
+					</div>
+				</div>
+				<!--//col-->
+
+				<div class="col-md-5 col-lg-5">
+					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/vjti-tbi.png">
+				</div>
+
+			</div>
+
 		</section>
+
+		
 
 
 	</div>
