--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 	<!-- FontAwesome JS -->
 	<script defer src="assets/fontawesome/js/all.js"></script>
+	
+	<!-- Core UI icon -->
+	<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/all.min.css">
 
 	<!-- Plugin CSS -->
 	<link rel="stylesheet" href="assets/plugins/tiny-slider/tiny-slider.css">
@@ -163,33 +166,47 @@
 		<section class="overview-section p-3 p-lg-5">
 			<div class="container">
 				<h2 class="section-title font-weight-bold mb-3">What I do</h2>
-				<div class="section-intro mb-5">I have more than 10 years' experience building software for clients all
-					over the world. Below is a quick overview of my main technical skill sets and technologies I use.
+				<div class="section-intro mb-5">I have more than 4 years' experience building software for a leading Swiss Investment Bank. Below is a quick overview of my main technical skill sets and technologies I use.
 					Want to find out more about my experience? Check out my <a class="text-link"
 						href="resume.html">online resume</a> and <a class="text-link" href="portfolio.html">project
 						portfolio</a>.</div>
 				<div class="row">
+
+					<!--//item-->
+					<div class="item col-6 col-lg-3">
+						<div class="item-inner">
+							<div class="item-icon"><i class="fab fa-python me-2"></i><i class="h-75 cib-django me-2" style="color:green"></i><i class="fa-sm cib-flask me-2" style="height:5px; color:black"></i></div>
+							<h3 class="item-title">Python, Flask &amp; Django</h3>
+							<div class="item-desc">Proficient in developing the backend softwares and web services using <strong>Flask</strong> and <strong> Django</strong> </div>
+						</div>
+						<!--//item-inner-->
+					</div>
+
+					<!--//item-->
+					<div class="item col-6 col-lg-3">
+						<div class="item-inner">
+							<div class="item-icon"><i class="cib-tensorflow me-2" style="color:orange"></i><i class="cib-keras me-2" style="color:red"></i></div>
+							<h3 class="item-title">Tensorflow &amp; Keras</h3>
+							<div class="item-desc">Good in developing Neural network models using Keras and Tensorflow. Worked extensively on neural models for Word and Sentence Embeddings </div>
+						</div>
+						<!--//item-inner-->
+					</div>
+
+
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
 							<div class="item-icon"><i class="fab fa-js-square"></i></div>
-							<h3 class="item-title">Vanilla JavaScript</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor.</div>
+							<h3 class="item-title">Scikit Learn and NLTK</h3>
+							<div class="item-desc">Expert in developing the Machine Learnign Systems specifically in domain of NLP. Strong expertise on neural embeddings and Text processing</div>
 						</div>
 						<!--//item-inner-->
 					</div>
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-angular me-2"></i><i
-									class="fab fa-react me-2"></i><i class="fab fa-vuejs"></i></div>
-							<h3 class="item-title">Angular, React &amp; Vue</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
+							<div class="item-icon"><i class="cib-mysql me-2"></i><i class="cib-mongodb me-2" style="color:green"></i></div>
+							<h3 class="item-title">MySQL, MongoDB &amp; InfluxDB</h3>
+							<div class="item-desc">Hands-on experience with multiple SQL and NoSQL database. Have worked on document based and time series databases</div>
 						</div>
 						<!--//item-inner-->
 					</div>
@@ -197,75 +214,39 @@
 
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-node-js"></i></div>
-							<h3 class="item-title">Node.js</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
+							<div class="item-icon"><i class="fab fa-node-js me-2" style="color: limegreen;"></i><i class="fab fa-react me-2"></i></div>
+							<h3 class="item-title">Node.js &amp; React</h3>
+							<div class="item-desc">Intermediate in developing the microservices using <strong>MERN</strong> stack. Familiar with asynchronus desing of web services</div>
 						</div>
 						<!--//item-inner-->
 					</div>
-					<!--//item-->
 
-					<div class="item col-6 col-lg-3">
-						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-python"></i></div>
-							<h3 class="item-title">Python &amp; Django</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
-						</div>
-						<!--//item-inner-->
-					</div>
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-php"></i></div>
-							<h3 class="item-title">PHP</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
+							<div class="item-icon"><i class="cib-java me-2"></i><i class="cib-spring me-2" style="color: green;"></i></div>
+							<h3 class="item-title">Core Java &amp; SpringBoot</h3>
+							<div class="item-desc">Familiar with backend development with Core Java and SpringBoot</div>
 						</div>
 						<!--//item-inner-->
 					</div>
+
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-npm me-2"></i><i class="fab fa-gulp me-2"></i><i
-									class="fab fa-grunt"></i></div>
-							<h3 class="item-title">npm, Gulp &amp; Grunt</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
-						</div>
-						<!--//item-inner-->
-					</div>
-					<!--//item-->
-					<div class="item col-6 col-lg-3">
-						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-html5 me-2"></i><i class="fab fa-css3-alt"></i>
+							<div class="item-icon"><i class="fab fa-html5 me-2" ></i><i class="fab fa-css3-alt me-2"></i><i class="fab fa-js-square me-2"></i>
 							</div>
-							<h3 class="item-title">HTML &amp; CSS</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
+							<h3 class="item-title">HTML, CSS &amp; JavaScript</h3>
+							<div class="item-desc">Experienced in developing HTML CSS based responsive websites </div>
 						</div>
 						<!--//item-inner-->
 					</div>
 					<!--//item-->
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-sass me-2"></i><i class="fab fa-less"></i></div>
-							<h3 class="item-title">Sass &amp; LESS</h3>
-							<div class="item-desc">List skills/technologies here. You can change the icon above to any
-								of the 1500+ <a class="theme-link" href="https://fontawesome.com/"
-									target="_blank">FontAwesome 5 free icons</a> available. Aenean commodo ligula eget
-								dolor. </div>
+							<div class="item-icon"><i class="cib-redhat me-2" style="color:red"></i><i class="cib-ubuntu me-2" style="color:orange"></i></div>
+							<h3 class="item-title">Redhat &amp; Ubuntu</h3>
+							<div class="item-desc">Experienced with working with linux based systems (extensively with RHEL7) for Software development and deployment</div>
 						</div>
 						<!--//item-inner-->
 					</div>
@@ -461,16 +442,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-1.jpg" class="card-img" alt="image">
+									<img src="assets/images/forest-logo-name-small.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Forest AI</a></h5>
 										<p class="card-text">Project intro lorem ipsum dolor sit amet, consectetuer
 											adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient
 											montes.</p>
-										<p class="card-text"><small class="text-muted">Client: Google</small></p>
+										<p class="card-text"><small class="text-muted">Client: Forest AI</small></p>
 									</div>
 								</div>
 							</div>
@@ -491,16 +471,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-2.jpg" class="card-img" alt="image">
+									<img src="assets/images/fusion-icon.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Fusion</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Dropbox</small></p>
+										<p class="card-text"><small class="text-muted">Client: Fusion</small></p>
 									</div>
 								</div>
 							</div>
@@ -521,16 +500,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-3.jpg" class="card-img" alt="image">
+									<img src="assets/images/chatbot.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">SMEBot</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Google</small></p>
+										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
 									</div>
 								</div>
 							</div>
@@ -551,16 +529,15 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+									<img src="assets/images/credit-risk.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Project
-												Heading</a></h5>
+										<h5 class="card-title"><a href="project.html" class="theme-link">Insight</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Uber</small></p>
+										<p class="card-text"><small class="text-muted">Client: Credit Suisse</small></p>
 									</div>
 								</div>
 							</div>
