Integrating the porject pages

--- a/academics.html
+++ b/academics.html
@@ -145,7 +145,7 @@
 					<!--//col-->
 
 					<div class="col-md-5 col-lg-5">
-						<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="assets/images/GaTech.svg">
+						<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="assets/images/education/GaTech.svg">
 					</div>
 				</div>
 
@@ -171,7 +171,7 @@
 					<!--//col-->
 
 					<div class="col-md-5 col-lg-5">
-						<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="assets/images/VJTI Logo.svg">
+						<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="assets/images/education/VJTI Logo.svg">
 					</div>
 				</div>
 			</div>
@@ -194,7 +194,7 @@
 				<!--//col-->
 
 				<div class="col-md-5 col-lg-5">
-					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/emory-university.svg">
+					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/education/emory-university.svg">
 				</div>
 
 			</div>
@@ -214,7 +214,7 @@
 				<!--//col-->
 
 				<div class="col-md-5 col-lg-5">
-					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/vjti-tbi.png">
+					<img class="profile-image img-fluid mb-3 mb-lg-0 me-md-0 small" style="height: 70%;" src="assets/images/education/vjti-tbi.png">
 				</div>
 
 			</div>
