--- a/portfolio.html
+++ b/portfolio.html
@@ -142,20 +142,20 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/forest-logo-name-small.png" class="card-img" alt="image">
+									<img src="assets/images/projects/forest-logo-name-small.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Forest AI</a></h5>
+										<h5 class="card-title"><a href="projects/forest-ai.html" class="theme-link">Forest AI</a></h5>
 										<p class="card-text"></p>
 										<p class="card-text"><small class="text-muted">Client: Google</small></p>
 									</div>
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/forest-ai.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/forest-ai.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -169,22 +169,22 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/fusion-icon.png" class="card-img" alt="image">
+									<img src="assets/images/projects/fusion-icon.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Fusion</a></h5>
+										<h5 class="card-title"><a href="projects/fusion.html" class="theme-link">Fusion</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
-										<p class="card-text"><small class="text-muted">Client: Dropbox</small></p>
+										<p class="card-text"><small class="text-muted">Client: Fusion HQ</small></p>
 									</div>
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/fusion.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/fusion.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -198,11 +198,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/chatbot.png" class="card-img" alt="image">
+									<img src="assets/images/projects/chatbot.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">SMEBot</a></h5>
+										<h5 class="card-title"><a href="projects/smebot.html" class="theme-link">SMEBot</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -211,9 +211,9 @@
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/smebot.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/smebot.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -227,11 +227,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/support-ticket.png" class="card-img" alt="image">
+									<img src="assets/images/projects/support-ticket.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Support Ticket Classification</a></h5>
+										<h5 class="card-title"><a href="projects/support-ticket.html" class="theme-link">Support Ticket Classification</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -240,9 +240,9 @@
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/support-ticket.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/support-ticket.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -256,11 +256,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/credit-risk.jpg" class="card-img" alt="image">
+									<img src="assets/images/projects/credit-risk.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Insight</a></h5>
+										<h5 class="card-title"><a href="projects/insight.html" class="theme-link">Insight</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -269,9 +269,9 @@
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/insight.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/insight.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -285,11 +285,11 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/DRR.png" class="card-img" alt="image">
+									<img src="assets/images/projects/DRR.png" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="project.html" class="theme-link">Digital Regulatory Reporting</a></h5>
+										<h5 class="card-title"><a href="projects/digital-regulatory-reporting.html" class="theme-link">Digital Regulatory Reporting</a></h5>
 										<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 											Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
 											ridiculus mus. </p>
@@ -298,9 +298,9 @@
 								</div>
 							</div>
 							<div class="link-mask">
-								<a class="link-mask-link" href="project.html"></a>
+								<a class="link-mask-link" href="projects/digital-regulatory-reporting.html"></a>
 								<div class="link-mask-text">
-									<a class="btn btn-secondary" href="project.html">
+									<a class="btn btn-secondary" href="projects/digital-regulatory-reporting.html">
 										<i class="fas fa-eye me-2"></i>View Case Study
 									</a>
 								</div>
@@ -314,7 +314,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="assets/images/project/project-7.jpg" class="card-img" alt="image">
+									<img src="assets/images/projects/project-7.jpg" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
