--- a/index.html
+++ b/index.html
@@ -327,14 +327,13 @@
 							<div class="item-inner">
 								<div class="quote-holder">
 									<blockquote class="quote-content">
-										I had an opportunity to work with Ratan in his early years at Credit Suisse.
-										He is a talent packed geek, with numerous computer science algorithms at
-										tip of his fingers and a an equal sophestication of implementing them in
-										python in matter of minutes. He always had third view at looking at
-										problems and would come up with amzing solutions out of the box. His
-										programming skills are equally matched by his networking as well as soft
-										skills and not to forget, a genuinely humble nature. Keep up the good work
-										Ratan.									
+										I had an opportunity to work with Ratan in his early years at Credit Suisse. 
+										He is a talent packed geek, with numerous computer science algorithms at tip of 
+										his fingers and a an equal sophestication of implementing them in python in matter 
+										of minutes. He always had third view at looking at problems and would come up with 
+										amzing solutions out of the box. His programming skills are equally matched by his 
+										networking as well as soft skills and not to forget, a genuinely humble nature. 
+										Keep up the good work Ratan
 									</blockquote>
 									<i class="fas fa-quote-left"></i>
 								</div>
