Fixing the images

--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
 							<div class="item-icon"><i class="cib-tensorflow me-2" style="color:orange"></i><i class="cib-keras me-2" style="color:red"></i></div>
-							<h3 class="item-title">Tensorflow &amp; Keras</h3>
-							<div class="item-desc">Good in developing Neural network models using Keras and Tensorflow. Worked extensively on neural models for Word and Sentence Embeddings </div>
+							<h3 class="item-title">Tensorflow, Scikit-Learn &amp; Keras</h3>
+							<div class="item-desc">Good in developing Neural network models using <strong>Keras</strong> and <strong>Tensorflow</strong>. 
+								Worked extensively on neural models for Word and Sentence Embeddings </div>
 						</div>
 						<!--//item-inner-->
 					</div>
@@ -200,9 +201,9 @@
 
 					<div class="item col-6 col-lg-3">
 						<div class="item-inner">
-							<div class="item-icon"><i class="fab fa-js-square"></i></div>
-							<h3 class="item-title">Scikit Learn and NLTK</h3>
-							<div class="item-desc">Expert in developing the Machine Learnign Systems specifically in domain of NLP. Strong expertise on neural embeddings and Text processing</div>
+							<div class="item-icon"><i class="cib-apache-spark me-2" style="color: #E25A1C;"></i></div>
+							<h3 class="item-title">Spark &amp; Hadoop</h3>
+							<div class="item-desc">Experienced in developing pipelines for data ingestion and processing using <strong>Hadoop</strong> and <strong>Spark</strong></div>
 						</div>
 						<!--//item-inner-->
 					</div>
