Updating the technologies used

--- a/services.html
+++ b/services.html
@@ -159,12 +159,15 @@
 									</ul>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Angular</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Python</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">jQuery</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Webpack</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">HTML/SASS</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">PostgresSQL</span></li>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Flask</button>
+										<button class="badge rounded-pill border mb-1">Java</button>
+										<button class="badge rounded-pill border mb-1">SpringBoot</button>
+										<button class="badge rounded-pill border mb-1">Bootstrap</button>
+										<button class="badge rounded-pill border mb-1">Kafka</button>
+										<button class="badge rounded-pill border mb-1">Hazelcast</button>
+										<button class="badge rounded-pill border mb-1">Bash Scripting</button>
+										<button class="badge rounded-pill border mb-1">Unix</button>
 									</ul>
 								</div><!--//resume-timeline-item-desc-->
 
@@ -184,12 +187,15 @@
 									<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">React</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Redux</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Django</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Webpack</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">HTML/SASS</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">MySQL</span></li>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
+										<button class="badge rounded-pill border mb-1">Scikit-Learn</button>
+										<button class="badge rounded-pill border mb-1">NLTK</button>
+										<button class="badge rounded-pill border mb-1">BERT</button>
+										<button class="badge rounded-pill border mb-1">Deep Learning</button>
+										<button class="badge rounded-pill border mb-1">ElMo</button>
+										<button class="badge rounded-pill border mb-1">ULMFit</button>
+										<button class="badge rounded-pill border mb-1">ElasticSearch</button>
 									</ul>
 								</div><!--//resume-timeline-item-desc-->
 
@@ -208,11 +214,15 @@
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Django</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">JavaScript</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Node.js</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Require.js</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">HTML/SASS</span></li>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">Keras</button>
+										<button class="badge rounded-pill border mb-1">Scikit-Learn</button>
+										<button class="badge rounded-pill border mb-1">NLTK</button>
+										<button class="badge rounded-pill border mb-1">BERT</button>
+										<button class="badge rounded-pill border mb-1">Deep Learning</button>
+										<button class="badge rounded-pill border mb-1">ElMo</button>
+										<button class="badge rounded-pill border mb-1">ULMFit</button>
+										<button class="badge rounded-pill border mb-1">ElasticSearch</button>
 									</ul>
 								</div><!--//resume-timeline-item-desc-->
 
@@ -230,10 +240,9 @@
 									<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum.</p>
 									<h4 class="professional-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
 									<ul class="list-inline">
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">Ruby on Rails</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">jQuery</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">HTML/LESS</span></li>
-										<li class="list-inline-item"><span class="badge rounded-pill border mb-1">MongoDB</span></li>
+										<button class="badge rounded-pill border mb-1">.NET</button>
+										<button class="badge rounded-pill border mb-1">Python</button>
+										<button class="badge rounded-pill border mb-1">SQL</button>
 									</ul>
 								</div><!--//resume-timeline-item-desc-->
 
